crates/pg_syntax/tests/snapshots/postgres_regress/money@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 2::float4 * m FROM money_data;"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    AExpr@7..20
      TypeCast@7..16
        AConst@7..8
          Iconst@7..8 "2"
        Typecast@8..10 "::"
        TypeName@10..16
          Ident@10..16 "float4"
      Whitespace@16..17 " "
      Ascii42@17..18 "*"
      Whitespace@18..19 " "
      ColumnRef@19..20
        Ident@19..20 "m"
  Whitespace@20..21 " "
  From@21..25 "FROM"
  Whitespace@25..26 " "
  RangeVar@26..36
    Ident@26..36 "money_data"
  Ascii59@36..37 ";"

