crates/pg_syntax/tests/snapshots/postgres_regress/money@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT m <= '$122.99' FROM money_data;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    AExpr@7..21
      ColumnRef@7..8
        Ident@7..8 "m"
      Whitespace@8..9 " "
      LessEquals@9..11 "<="
      Whitespace@11..12 " "
      AConst@12..21
        Sconst@12..21 "'$122.99'"
  Whitespace@21..22 " "
  From@22..26 "FROM"
  Whitespace@26..27 " "
  RangeVar@27..37
    Ident@27..37 "money_data"
  Ascii59@37..38 ";"

