crates/pg_syntax/tests/snapshots/postgres_regress/money@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT cashlarger(m, '$124.00') FROM money_data;"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..17 "cashlarger"
      Ascii40@17..18 "("
      ColumnRef@18..19
        Ident@18..19 "m"
      Ascii44@19..20 ","
      Whitespace@20..21 " "
      AConst@21..30
        Sconst@21..30 "'$124.00'"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  From@32..36 "FROM"
  Whitespace@36..37 " "
  RangeVar@37..47
    Ident@37..47 "money_data"
  Ascii59@47..48 ";"

